# objetnote

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  NodeExpression  README.md  cmake_install.cmake  constant.cpp  constant.h  main  main.cpp  your_executable_name
constante/: constante.cpp  constante.h
node/: node.cpp  node.h
operator/: operator.cpp  operator.h
variable/: variable..cpp  variable.cpp  variable.h
visitor/: visitor.cpp  visitor.hpp
